# discord-jerrymd-guild-bot

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/: consts.rs  main.rs  on_guild_member.rs  on_message.rs
