[package]
name = "discord-jerrymd-guild-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
production=[]

[dependencies]
serenity = { version = "0.10.9", default-features=false, features = ["client", "gateway", "cache", "rustls_backend", "model"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
eyre = "0.6.5"
color-eyre = "0.6.0"
